networkpolicy/adminnetworkpolicy/netpol-anp-pass-allow-same-namespace.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: pass-allowed-zones-same-namespace
spec:
  priority: 50
  ingress:
    - action: Pass
      from:
        - namespaces:
            matchExpressions:
              - key: zone
                operator: In
                values: $(ALLOWED_ZONES)
    - action: Allow
      from:
        - namespaces:
            namespaceSelector: {}
  egress:
    - action: Pass
      to:
        - namespaces:
            matchExpressions:
              - key: zone
                operator: In
                values: $(ALLOWED_ZONES)
    - action: Allow
      to:
        - namespaces:
            namespaceSelector: {}
  subject:
    namespaces:
      matchExpressions:
        - key: zone
          operator: In
          values: $(ALLOWED_ZONES)
